--- a/tris-main-master/app/src/main/res/layout/main_activity.xml
+++ b/tris-main-master/app/src/main/res/layout/main_activity.xml
@@ -53,4 +53,14 @@
         android:textIsSelectable="true"
         android:textSize="16sp" />
 
+    <TextView
+        android:id="@+id/tamper_status_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="24dp"
+        android:textIsSelectable="true"
+        android:textSize="16sp" />
+
 </LinearLayout>
