--- a/tris-main-master/app/src/main/res/layout/main_activity.xml
+++ b/tris-main-master/app/src/main/res/layout/main_activity.xml
@@ -14,7 +14,10 @@
      limitations under the License.
 -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_activity_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,7 +25,17 @@
     android:paddingBottom="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:paddingTop="16dp">
+    android:paddingTop="16dp"
+    android:background="@drawable/gradient">
+
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/gradient"
+        android:onClick="bluetoothConnect"
+        android:src="@drawable/ic_group_2" />
 
     <TextView
         android:id="@+id/latitude_text"
@@ -31,17 +44,21 @@
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
         android:textIsSelectable="true"
-        android:textSize="16sp" />
+        android:textSize="20sp"
+        android:textColor="@color/Text"
+        android:layout_below="@id/imageButton"/>
 
     <TextView
         android:id="@+id/longitude_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/Text"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="24dp"
         android:textIsSelectable="true"
-        android:textSize="16sp" />
+        android:textSize="20sp"
+        android:layout_below="@id/latitude_text"/>
 
     <TextView
         android:id="@+id/temperature_data"
@@ -51,7 +68,9 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="24dp"
         android:textIsSelectable="true"
-        android:textSize="16sp" />
+        android:textSize="20sp"
+        android:textColor="@color/Text"
+        android:layout_below="@id/longitude_text"/>
 
     <TextView
         android:id="@+id/tamper_status_data"
@@ -61,6 +80,20 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="24dp"
         android:textIsSelectable="true"
-        android:textSize="16sp" />
+        android:textSize="20sp"
+        android:textColor="@color/Text"
+        android:layout_below="@id/temperature_data"/>
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/heart_beat_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="24dp"
+        android:textIsSelectable="true"
+        android:textSize="20sp"
+        android:textColor="@color/Text"
+        android:layout_below="@id/tamper_status_data"/>
+
+</RelativeLayout>
